--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -1,6 +1,7 @@
 # Configuración general de la herramienta
 Options:
-  execution: full #full (default), fast
+  # execution: full #full (default), fast
+  execution: fast
   processes: 2
 
 # Herramientas que se van a ejecutar
