--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -36,16 +36,16 @@ phpcs:
     ignore: [ vendor, tools]
     error-severity: 1
     warning-severity: 6
-    otherArguments: '--report=summary --parallel=2'
+    otherArguments: '-s'
     
 phpcbf:
     usePhpcsConfiguration: true
-    # executablePath: tools/php71/phpcbf
-    paths: ['./']
-    standard: './qa/psr12-ruleset.xml' #or predefined rules: Squiz, PSR12, Generic, PEAR
-    ignore: [vendor] # Se podría configurar en el standard directamente
-    error-severity: 5
-    warning-severity: 6
+    # executablePath: tools/phpcbf
+    # paths: ['./']
+    # standard: './qa/rules/psr12-ruleset.xml' #or predefined rules: Squiz, PSR12, Generic, PEAR
+    # ignore: [vendor] # Se podría configurar en el standard directamente
+    # error-severity: 5
+    # warning-severity: 6
 
 phpmd:
   executablePath: tools/phpmd
