--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,31 @@
-APP_NAME=Laravel
+APP_NAME="Laravel Plantilla"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+Stm7VPl2um14dH1ZDunE3C90RxFdM6OaEetFzKmTwQ=
+APP_IV=base64:356503156
 APP_DEBUG=true
-APP_URL=http://localhost
+# APP_URL=http://localhost
+APP_URL=http://desarrollo2.zataca.com/api
 
-LOG_CHANNEL=stack
+
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=laravel_plantilla
+DB_USERNAME=zataca
+DB_PASSWORD=zataca
+
+SUPER_ADMIN_PASSWORD=password
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
+# QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -29,13 +36,21 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS="${APP_NAME}@mail.com"
+
+MAIL_HOST=
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_PORT=2525
+MAILTRAP_USERNAME=74a59b1f4e181e
+MAILTRAP_PASSWORD=85790c170fd681
+
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
