--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,8 @@
         }
     },
     "scripts": {
+        "auto": "composer dump-autoload -o",
+        "load": "composer dump-autoload -o",
         "migrate:dev": "php artisan migrate:fresh && php artisan db:seed",
         "migrate:deploy": "php artisan migrate && php artisan db:seed --class=DeploySeeder",
         "migrate:testing": "php artisan migrate:fresh --env=testing && php artisan db:seed --env=testing --class=TestingSeeder",
