--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -21,7 +21,7 @@ phpstan:
   # config: "./qa/phpstan-phpqa.neon"
   # memory-limit: '1G' # Examples: 1M 2000M 1G 5G
   # level: 4 #level 0-8 (0 default, 8 max)
-  otherArguments: 'src tests --level 1 --no-progress'
+  otherArguments: 'src tests --level 1 --no-progress --configuration qa/stan/phpstan.neon'
 
 #Se ejecuta contra la raiz del proyecto
 parallel-lint:
