--- a/.env.testing
+++ b/.env.testing
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://desarrollo2.zataca.com
+
 APP_KEY=base64:zyTjnjv9UZiouNKwFYwvTBCM+b9sgYGekiEz4QXgDks=
 
 APP_LOCALE=en
